adding link for subway app

--- a/index.html
+++ b/index.html
@@ -174,7 +174,11 @@
                 <div class="handwriting">Building my AI Native portfolio - exciting projects coming soon! 🚧</div>
                 
                 <div class="project-card">
-                    <div class="project-title">🤖 AI-Powered Learning Assistant</div>
+                   <div class="project-title">
+    <a href="https://jonelrichardson-spec.github.io/subway-alert-/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
+        🤖 AI-Powered Learning Assistant
+    </a>
+</div>
                     <div class="project-description">
                         Drawing from my teaching background, I'm developing an AI assistant that helps ESL students practice conversational English with personalized feedback and cultural context. This project combines my passion for education with cutting-edge AI technology.
                     </div>
