adding fit track

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
                 <div class="project-card">
                     <div class="project-title">✈️ Smart Travel Planning Workflow</div>
-                    <div class="project-description">
+                    <div class="https://jonelrichardson-spec.github.io/fittrack-v2/">
                         Combining my love for travel with AI efficiency, this project creates personalized itineraries based on budget, interests, cultural preferences, and real-time data. Perfect for fellow wanderers who want intelligent trip planning.
                     </div>
                     <div class="project-tech">
