--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
                 <div class="project-card">
                    <div class="project-title">
     <a href="https://jonelrichardson-spec.github.io/subway-alert-/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
-        🤖 AI-Powered Learning Assistant
+        🤖 Subway Alert System
     </a>
 </div>
-                    <div class="project-description">
+                    <div class="https://jonelrichardson-spec.github.io/fittrack-v2/">
                         Drawing from my teaching background, I'm developing an AI assistant that helps ESL students practice conversational English with personalized feedback and cultural context. This project combines my passion for education with cutting-edge AI technology.
                     </div>
                     <div class="project-tech">
@@ -192,7 +192,7 @@
 
                 <div class="project-card">
                     <div class="project-title">✈️ Smart Travel Planning Workflow</div>
-                    <div class="https://jonelrichardson-spec.github.io/fittrack-v2/">
+                    <div class="project-description">
                         Combining my love for travel with AI efficiency, this project creates personalized itineraries based on budget, interests, cultural preferences, and real-time data. Perfect for fellow wanderers who want intelligent trip planning.
                     </div>
                     <div class="project-tech">
