--- a/index.html
+++ b/index.html
@@ -168,43 +168,86 @@
                 </div>
             </section>
 
-            <!-- Projects Section -->
+           <!-- Projects Section -->
             <section class="section" id="projects">
                 <h2 class="section-title" data-tooltip="AI solutions + teaching portfolio">Projects</h2>
                 <div class="handwriting">Building my AI Native portfolio - exciting projects coming soon! 🚧</div>
                 
                 <div class="project-card">
-                   <div class="project-title">
-    <a href="https://jonelrichardson-spec.github.io/subway-alert-/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
-        🤖 Subway Alert System
-    </a>
-</div>
-                    <div class="https://jonelrichardson-spec.github.io/fittrack-v2/">
-                        Drawing from my teaching background, I'm developing an AI assistant that helps ESL students practice conversational English with personalized feedback and cultural context. This project combines my passion for education with cutting-edge AI technology.
+                    <div class="project-title">
+                        <a href="https://jonelrichardson-spec.github.io/subway-alert-/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
+                            🚇 NYC Subway Alert System
+                        </a>
+                    </div>
+                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">September 2024</div>
+                    <div class="project-description">
+                        A real-time NYC subway service alert tracker with visual status indicators, line filtering, and rush hour mode. Users can quickly scan service disruptions, get car positioning tips for major stations, and filter alerts by severity and location to make smarter commute decisions.
                     </div>
                     <div class="project-tech">
-                        <span class="tech-tag">AI Prompting</span>
-                        <span class="tech-tag">Education Tech</span>
+                        <span class="tech-tag">HTML/CSS/JavaScript</span>
+                        <span class="tech-tag">API Integration</span>
+                        <span class="tech-tag">Responsive Design</span>
                         <span class="tech-tag">UX Design</span>
-                        <span class="tech-tag">Natural Language Processing</span>
                     </div>
                 </div>
 
                 <div class="project-card">
-                    <div class="project-title">✈️ Smart Travel Planning Workflow</div>
+                    <div class="project-title">
+                        <a href="https://jonelrichardson-spec.github.io/fittrack-v2/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
+                            💪 FitTrack V2
+                        </a>
+                    </div>
+                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2024</div>
                     <div class="project-description">
-                        Combining my love for travel with AI efficiency, this project creates personalized itineraries based on budget, interests, cultural preferences, and real-time data. Perfect for fellow wanderers who want intelligent trip planning.
+                        A comprehensive fitness tracking app featuring workout logging, custom exercise builder, progress tracking with calendar visualization, and achievement badges. Tracks sets, reps, weight progression with PR detection, and provides workout history analytics to help users stay motivated and reach their fitness goals.
                     </div>
                     <div class="project-tech">
-                        <span class="tech-tag">Workflow Automation</span>
-                        <span class="tech-tag">Data Analysis</span>
-                        <span class="tech-tag">API Integration</span>
-                        <span class="tech-tag">Machine Learning</span>
+                        <span class="tech-tag">React</span>
+                        <span class="tech-tag">Vite</span>
+                        <span class="tech-tag">Tailwind CSS</span>
+                        <span class="tech-tag">localStorage</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-title">
+                        <a href="#" target="_blank" style="color: #1e3a8a; text-decoration: none;">
+                            🥘 PantryPal
+                        </a>
+                    </div>
+                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2024</div>
+                    <div class="project-description">
+                        A smart pantry management app that reduces food waste and saves money by tracking inventory with barcode scanning, alerting users about expiring items, and matching available ingredients to recipes. Features intelligent shopping list generation and cost tracking to help budget-conscious home cooks maximize their groceries.
+                    </div>
+                    <div class="project-tech">
+                        <span class="tech-tag">React</span>
+                        <span class="tech-tag">Spoonacular API</span>
+                        <span class="tech-tag">Barcode Scanning</span>
+                        <span class="tech-tag">Data Management</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-title">
+                        <a href="#" target="_blank" style="color: #1e3a8a; text-decoration: none;">
+                            🧠 explainThis
+                        </a>
+                    </div>
+                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2024</div>
+                    <div class="project-description">
+                        An AI-powered learning tool that translates technical jargon into five comprehension levels (Beginner to Expert). Features an explore page with curated tech categories, explanation history library, and dark mode for comfortable learning experiences at any skill level.
+                    </div>
+                    <div class="project-tech">
+                        <span class="tech-tag">React</span>
+                        <span class="tech-tag">Claude API</span>
+                        <span class="tech-tag">AI Integration</span>
+                        <span class="tech-tag">Education Tech</span>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-title">📝 This Interactive Portfolio</div>
+                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2024</div>
                     <div class="project-description">
                         A composition notebook-themed portfolio that honors my teaching background while showcasing my growing technical skills and AI Native journey. Built with responsive design and smooth animations to create an engaging user experience.
                     </div>
@@ -216,7 +259,7 @@
                     </div>
                 </div>
             </section>
-
+            
             <!-- Contact Section -->
             <section class="section" id="contact">
                 <h2 class="section-title" data-tooltip="Available globally - coffee chats welcome">Let's Connect!</h2>
