Update Projects section: remove portfolio, update dates to 2025, add clear URL placeholders

--- a/index.html
+++ b/index.html
@@ -167,19 +167,19 @@
                     </div>
                 </div>
             </section>
-
-           <!-- Projects Section -->
+<!-- Projects Section -->
             <section class="section" id="projects">
                 <h2 class="section-title" data-tooltip="AI solutions + teaching portfolio">Projects</h2>
-                <div class="handwriting">Building my AI Native portfolio - exciting projects coming soon! 🚧</div>
+                <div class="handwriting">My AI Native journey - built with passion and curiosity! 🚀</div>
                 
                 <div class="project-card">
                     <div class="project-title">
+                        <!-- 🔗 LIVE URL: Replace the href below with your deployed link -->
                         <a href="https://jonelrichardson-spec.github.io/subway-alert-/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
                             🚇 NYC Subway Alert System
                         </a>
                     </div>
-                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">September 2024</div>
+                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">September 2025</div>
                     <div class="project-description">
                         A real-time NYC subway service alert tracker with visual status indicators, line filtering, and rush hour mode. Users can quickly scan service disruptions, get car positioning tips for major stations, and filter alerts by severity and location to make smarter commute decisions.
                     </div>
@@ -193,11 +193,12 @@
 
                 <div class="project-card">
                     <div class="project-title">
+                        <!-- 🔗 LIVE URL: Replace the href below with your deployed link -->
                         <a href="https://jonelrichardson-spec.github.io/fittrack-v2/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
                             💪 FitTrack V2
                         </a>
                     </div>
-                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2024</div>
+                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2025</div>
                     <div class="project-description">
                         A comprehensive fitness tracking app featuring workout logging, custom exercise builder, progress tracking with calendar visualization, and achievement badges. Tracks sets, reps, weight progression with PR detection, and provides workout history analytics to help users stay motivated and reach their fitness goals.
                     </div>
@@ -211,11 +212,12 @@
 
                 <div class="project-card">
                     <div class="project-title">
-                        <a href="#" target="_blank" style="color: #1e3a8a; text-decoration: none;">
-                            🥘 PantryPal
+                        <!-- 🔗 ADD YOUR URL: Replace # with https://your-pantrypal-link.github.io -->
+                        <a href="https://pantry-pal-git-master-jonels-projects-4fb81047.vercel.app/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
+                            🥘 FoodKeeper
                         </a>
                     </div>
-                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2024</div>
+                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2025</div>
                     <div class="project-description">
                         A smart pantry management app that reduces food waste and saves money by tracking inventory with barcode scanning, alerting users about expiring items, and matching available ingredients to recipes. Features intelligent shopping list generation and cost tracking to help budget-conscious home cooks maximize their groceries.
                     </div>
@@ -229,11 +231,12 @@
 
                 <div class="project-card">
                     <div class="project-title">
-                        <a href="#" target="_blank" style="color: #1e3a8a; text-decoration: none;">
+                        <!-- 🔗 ADD YOUR URL: Replace # with https://your-explainthis-link.github.io -->
+                        <a href="https://explainthismvp.netlify.app/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
                             🧠 explainThis
                         </a>
                     </div>
-                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2024</div>
+                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2025</div>
                     <div class="project-description">
                         An AI-powered learning tool that translates technical jargon into five comprehension levels (Beginner to Expert). Features an explore page with curated tech categories, explanation history library, and dark mode for comfortable learning experiences at any skill level.
                     </div>
@@ -244,22 +247,8 @@
                         <span class="tech-tag">Education Tech</span>
                     </div>
                 </div>
-
-                <div class="project-card">
-                    <div class="project-title">📝 This Interactive Portfolio</div>
-                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2024</div>
-                    <div class="project-description">
-                        A composition notebook-themed portfolio that honors my teaching background while showcasing my growing technical skills and AI Native journey. Built with responsive design and smooth animations to create an engaging user experience.
-                    </div>
-                    <div class="project-tech">
-                        <span class="tech-tag">HTML/CSS</span>
-                        <span class="tech-tag">Responsive Design</span>
-                        <span class="tech-tag">GitHub Pages</span>
-                        <span class="tech-tag">AI-Assisted Development</span>
-                    </div>
-                </div>
             </section>
-            
+
             <!-- Contact Section -->
             <section class="section" id="contact">
                 <h2 class="section-title" data-tooltip="Available globally - coffee chats welcome">Let's Connect!</h2>
