Add LinkedIn UX project with live demo link

--- a/index.html
+++ b/index.html
@@ -122,59 +122,59 @@
 
             <!-- Skills Section -->
             <section class="section" id="skills">
-                <h2 class="section-title" data-tooltip="Updated weekly - actively learning">Skills & Learning Journey</h2>
-                <div class="handwriting">Currently 2 months into my AI Native journey - watch this space grow! 📈</div>
+                <h2 class="section-title" data-tooltip="Built through hands-on projects">Skills & Technologies</h2>
+                <div class="handwriting">3+ months of intensive building - proven through live projects! 🚀</div>
                 <div class="skills-grid">
                     <div class="skill-category">
-                        <h4>🤖 AI & Prompting</h4>
+                        <h4>⚛️ Frontend Development</h4>
                         <ul class="skill-list">
-                            <li>Prompt Engineering</li>
-                            <li>AI Tool Integration</li>
-                            <li>Claude & ChatGPT</li>
-                            <li>AI Workflow Design</li>
-                            <li>Model Training Concepts</li>
+                            <li>React.js & Component Architecture</li>
+                            <li>HTML5, CSS3, JavaScript (ES6+)</li>
+                            <li>Responsive & Mobile-First Design</li>
+                            <li>Tailwind CSS & Modern Styling</li>
+                            <li>State Management (useState, useEffect)</li>
                         </ul>
                     </div>
                     <div class="skill-category">
-                        <h4>💻 Technical Growth</h4>
+                        <h4>🤖 AI & Integration</h4>
                         <ul class="skill-list">
-                            <li>GitHub & Version Control</li>
-                            <li>HTML/CSS/JavaScript</li>
-                            <li>Web Development</li>
-                            <li>Project Management</li>
-                            <li>API Integration</li>
+                            <li>AI API Integration (Claude, Gemini)</li>
+                            <li>Prompt Engineering & Optimization</li>
+                            <li>Third-Party APIs (Spoonacular, MTA)</li>
+                            <li>RESTful API Design & Implementation</li>
+                            <li>AI-Powered Feature Development</li>
                         </ul>
                     </div>
                     <div class="skill-category">
-                        <h4>🎓 Teaching & Communication</h4>
+                        <h4>🛠️ Tools & Deployment</h4>
                         <ul class="skill-list">
-                            <li>8 Years ESL Teaching</li>
-                            <li>Cross-Cultural Communication</li>
-                            <li>Presentation Skills</li>
-                            <li>Curriculum Development</li>
-                            <li>Student Assessment</li>
+                            <li>Git & GitHub (Version Control)</li>
+                            <li>Vite & Modern Build Tools</li>
+                            <li>Vercel & Netlify Deployment</li>
+                            <li>GitHub Pages & CI/CD</li>
+                            <li>Browser DevTools & Debugging</li>
                         </ul>
                     </div>
                     <div class="skill-category">
-                        <h4>🌟 Personal Strengths</h4>
+                        <h4>🎨 UX & Product Thinking</h4>
                         <ul class="skill-list">
-                            <li>Adaptability</li>
-                            <li>Cultural Intelligence</li>
-                            <li>Problem Solving</li>
-                            <li>Team Collaboration</li>
-                            <li>Resilience</li>
+                            <li>User-Centered Design Principles</li>
+                            <li>Accessibility & Inclusive Design</li>
+                            <li>Problem-Solving & Feature Planning</li>
+                            <li>Data Modeling & Architecture</li>
+                            <li>User Flow & Journey Mapping</li>
                         </ul>
                     </div>
                 </div>
             </section>
-<!-- Projects Section -->
+
+            <!-- Projects Section -->
             <section class="section" id="projects">
-                <h2 class="section-title" data-tooltip="AI solutions + teaching portfolio">Projects</h2>
+                <h2 class="section-title" data-tooltip="AI solutions + UX design">Projects</h2>
                 <div class="handwriting">My AI Native journey - built with passion and curiosity! 🚀</div>
                 
                 <div class="project-card">
                     <div class="project-title">
-                        <!-- 🔗 LIVE URL: Replace the href below with your deployed link -->
                         <a href="https://jonelrichardson-spec.github.io/subway-alert-/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
                             🚇 NYC Subway Alert System
                         </a>
@@ -193,7 +193,6 @@
 
                 <div class="project-card">
                     <div class="project-title">
-                        <!-- 🔗 LIVE URL: Replace the href below with your deployed link -->
                         <a href="https://jonelrichardson-spec.github.io/fittrack-v2/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
                             💪 FitTrack V2
                         </a>
@@ -212,7 +211,6 @@
 
                 <div class="project-card">
                     <div class="project-title">
-                        <!-- 🔗 ADD YOUR URL: Replace # with https://your-pantrypal-link.github.io -->
                         <a href="https://pantry-pal-git-master-jonels-projects-4fb81047.vercel.app/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
                             🥘 FoodKeeper
                         </a>
@@ -231,7 +229,6 @@
 
                 <div class="project-card">
                     <div class="project-title">
-                        <!-- 🔗 ADD YOUR URL: Replace # with https://your-explainthis-link.github.io -->
                         <a href="https://explainthismvp.netlify.app/" target="_blank" style="color: #1e3a8a; text-decoration: none;">
                             🧠 explainThis
                         </a>
@@ -242,9 +239,27 @@
                     </div>
                     <div class="project-tech">
                         <span class="tech-tag">React</span>
-                        <span class="tech-tag">Claude API</span>
+                        <span class="tech-tag">Gemini API</span>
                         <span class="tech-tag">AI Integration</span>
                         <span class="tech-tag">Education Tech</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-title">
+                        <a href="https://gregarious-crumble-8214b5.netlify.app" target="_blank" style="color: #1e3a8a; text-decoration: none;">
+                            💬 LinkedIn Messaging UX Enhancement
+                        </a>
+                    </div>
+                    <div class="project-date" style="color: #6b7280; font-size: 0.9em; margin-bottom: 0.5rem;">October 2025</div>
+                    <div class="project-description">
+                        A UX redesign of LinkedIn's messaging interface featuring smart reminder systems, quick reply functionality, and snooze capabilities. Implements core UX principles including clear affordances, user feedback, error prevention, and system status visibility to improve professional communication workflow.
+                    </div>
+                    <div class="project-tech">
+                        <span class="tech-tag">UX Design</span>
+                        <span class="tech-tag">User Research</span>
+                        <span class="tech-tag">Interaction Design</span>
+                        <span class="tech-tag">Accessibility</span>
                     </div>
                 </div>
             </section>
